show arguments
